--- a/categories.html
+++ b/categories.html
@@ -1,7 +1,6 @@
 ---
 layout: page
-title: Categories
-header: Posts By Category
+title: Categorias
 group: navigation
 ---
 {% include JB/setup %}
@@ -12,11 +11,10 @@ group: navigation
 </ul>
 
 
-{% for category in site.categories %} 
-  <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
-  <ul>
-    {% assign pages_list = category[1] %}  
-    {% include JB/pages_list %}
-  </ul>
+{% for category in site.categories %}
+<h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
+<ul>
+  {% assign pages_list = category[1] %}
+  {% include JB/pages_list %}
+</ul>
 {% endfor %}
-
